It's in a weird place.

--- a/app/return.html
+++ b/app/return.html
@@ -10,5 +10,6 @@
     <script src="vendor/simple-query-string/src/simplequerystring.min.js?v=$DIM_VERSION"></script>
     <script src="scripts/dimLogin.module.js?v=$DIM_VERSION"></script>
     <script src="scripts/login/return.component.js?v=$DIM_VERSION"></script>
+    <script src="vendor/angular-local-storage/dist/angular-local-storage.js"></script>
   </body>
 </html>
