--- a/src/scripts/welcome/welcome.html
+++ b/src/scripts/welcome/welcome.html
@@ -1,1 +1,11 @@
-Welcome
+<h1>Welcome Guardian.</h1>
+
+<p>Destiny Item Manager is here to help you become a more powerful Guardian.</p>
+
+<p>The first step is for you to allow DIM to know more about your characters, vault, and items in Destiny.  We also need permission to move your items in Destiny.</p>
+
+<button>Authorize DIM with Bungie.net</button>  
+
+<p>A Bungie.net account that is linked to either a PlayStation or Microsoft account is required. <a href="https://www.bungie.net/en/Help/Article/12130" target="_blank">Learn more about Bungie.net accounts, and linking your PlayStation and Xbox Accounts.</a></p>
+
+<p>Having trouble authorizing DIM with Bungie.net? Reach out to us on <a href="https://twitter.com/ThisIsDIM" target="_blank">Twitter</a> for help.</p>
